--- a/package.json
+++ b/package.json
@@ -1,27 +1,171 @@
 {
-  "name": "nextgram",
+  "name": "nextjs-material-kit-pro",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
-    "isomorphic-fetch": "^2.2.1",
-    "next": "^9.3.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "swr": "^0.2.0"
+    "@azure/cosmos": "3.3.1",
+    "@azure/storage-blob": "^12.4.1",
+    "@createnextapp/react-barcode": "^1.1.1",
+    "@date-io/date-fns": "^1.3.13",
+    "@date-io/moment": "^2.10.8",
+    "@easypost/api": "^3.10.1",
+    "@google-pay/button-react": "^2.2.0",
+    "@lottiefiles/react-lottie-player": "^2.2.2",
+    "@material-ui/core": "4.9.12",
+    "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.2.10",
+    "@stripe/react-stripe-js": "^1.2.2",
+    "@stripe/stripe-js": "^1.12.1",
+    "@zeit/cosmosdb-server": "^0.11.0",
+    "@zeit/next-css": "1.0.1",
+    "@zeit/next-sass": "1.0.1",
+    "animate.css": "3.7.2",
+    "async": "^3.2.0",
+    "axios": "^0.21.1",
+    "azure-storage": "^2.10.3",
+    "barcode-react-scanner": "^1.2.0",
+    "bcryptjs": "^2.4.3",
+    "classnames": "2.2.6",
+    "connect-mongo": "^3.2.0",
+    "cors": "^2.8.5",
+    "csv": "^5.3.2",
+    "date-fns": "^2.17.0",
+    "dotenv": "^8.2.0",
+    "dwolla-v2": "^3.2.0",
+    "dynamsoft-javascript-barcode": "^8.1.2",
+    "filepond": "^4.25.1",
+    "formidable": "^1.2.2",
+    "fs": "0.0.1-security",
+    "globalthis": "^1.0.1",
+    "into-stream": "^6.0.0",
+    "jquery": "^3.5.1",
+    "jquery-mask-plugin": "^1.14.16",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
+    "material-table": "^1.69.2",
+    "moment": "^2.29.1",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.15",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multiselect-react-dropdown": "^1.6.5",
+    "next": "^10.0.6",
+    "next-compose-plugins": "2.2.0",
+    "next-connect": "^0.8.1",
+    "next-images": "1.3.1",
+    "next-offline": "^5.0.3",
+    "next-pwa": "^5.0.5",
+    "next-redux-wrapper": "^6.0.2",
+    "next-session": "^3.4.0",
+    "next-videos": "1.4.0",
+    "node-sass": "4.14.0",
+    "nodemailer": "^6.4.17",
+    "nouislider": "14.2.0",
+    "os": "^0.1.1",
+    "parse-multipart": "^1.0.4",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "path": "0.12.7",
+    "platform": "^1.3.6",
+    "prop-types": "15.7.2",
+    "public-ip": "^4.0.3",
+    "qrcode.react": "^1.0.1",
+    "quagga": "^0.12.1",
+    "query-string": "^6.13.8",
+    "react": "16.13.1",
+    "react-animate-on-scroll": "2.1.5",
+    "react-apple-pay-button": "0.0.1-alpha.0",
+    "react-barcode": "^1.4.0",
+    "react-barcode-reader": "0.0.2",
+    "react-bootstrap": "^1.4.3",
+    "react-burger-menu": "^3.0.3",
+    "react-checkbox-tree": "^1.6.0",
+    "react-color": "^2.19.3",
+    "react-customizable-progressbar": "^1.0.2",
+    "react-datetime": "^2.16.3",
+    "react-device-detect": "^1.15.0",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
+    "react-dom": "16.13.1",
+    "react-drag-and-drop": "^3.0.0",
+    "react-dropzone": "^11.3.1",
+    "react-filepond": "^7.1.0",
+    "react-geolocated": "^3.0.1",
+    "react-google-maps": "9.4.5",
+    "react-google-pay-button": "^1.1.3",
+    "react-hamburger-menu": "^1.2.1",
+    "react-image-gallery": "1.0.7",
+    "react-images-upload": "^1.2.8",
+    "react-infinite-loader": "^1.0.4",
+    "react-input-mask": "^2.0.4",
+    "react-list-drag-and-drop": "^0.9.2",
+    "react-number-format": "^4.4.4",
+    "react-otp-input": "^2.0.2",
+    "react-phone-input-2": "^2.13.8",
+    "react-progressbar": "^15.4.1",
+    "react-qr-reader": "^2.2.1",
+    "react-redux": "^7.2.0",
+    "react-redux-loader": "^1.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-slick": "^0.25.2",
+    "react-social-login": "^3.4.8",
+    "react-swipeable-views": "0.13.9",
+    "react-tagsinput": "3.19.0",
+    "react-text-mask": "^5.4.3",
+    "react-to-print": "^2.12.3",
+    "react-toastify": "^6.2.0",
+    "react-twitter-login": "^1.1.2",
+    "react-webcam": "^5.2.2",
+    "reactjs-eventemitter": "^1.0.6",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-form": "^8.3.7",
+    "redux-form-input-masks": "^2.0.1",
+    "redux-thunk": "^2.3.0",
+    "socket.io": "^2.4.1",
+    "socket.io-client": "^2.4.0",
+    "stars-rating": "^1.1.0",
+    "stripe": "^8.135.0",
+    "sweetalert2": "^9.17.1",
+    "sweetalert2-react-content": "^3.2.2",
+    "swr": "^0.2.3",
+    "uid": "^1.0.0",
+    "underscore": "^1.12.0",
+    "url-loader": "^4.1.1",
+    "uuid": "^8.3.2",
+    "validator": "^13.5.2",
+    "webpack": "4.43.0"
   },
+  
   "scripts": {
-    "dev": "next dev",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start --hostname 0.0.0.0 -p 8080",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && rm -rf .next/ && npm install && npm run dev",
+    "compile-sass": "node-sass assets/scss/nextjs-material-kit-pro.scss assets/css/nextjs-material-kit-pro.css",
+    "minify-sass": "node-sass assets/scss/nextjs-material-kit-pro.scss assets/css/nextjs-material-kit-pro.min.css --output-style compressed",
+    "map-sass": "node-sass assets/scss/nextjs-material-kit-pro.scss assets/css/nextjs-material-kit-pro.css --source-map true"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": []
+  },
+  "optionalDependencies": {
+    "@types/googlemaps": "3.39.4",
+    "@types/markerclustererplus": "2.1.33"
   },
   "devDependencies": {
-    "husky": "^4.2.3",
-    "prettier": "2.0.2",
-    "pretty-quick": "^2.0.1",
-    "sass": "^1.26.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-react": "^7.22.0"
   }
 }
